Refactored Nagios playbook

--- a/roles/nagios_configuration/templates/htdigest.users.j2
+++ b/roles/nagios_configuration/templates/htdigest.users.j2
@@ -1,1 +1,1 @@
-nagiosadmin:$5$rounds=535000$GraOGvgo49WreoM4$1nSYQJb9PjY.H50W.Ggm1Kh4Gtu2AMXb/gCA4CdaxbA
+{{ nagios_admin }}:{{ nagios_admin_hash }}
